Try adding the --add-opens from the catalina.sh script when running on Java 9+